[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.version]
path = 'arq/version.py'

[project]
name = 'arq'
description = 'Job queues in python with asyncio and redis'
authors = [{name = 'Samuel Colvin', email = 's@muelcolvin.com'}]
license = { text = 'MIT' }
readme = 'README.md'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Framework :: AsyncIO',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Operating System :: Unix',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Internet',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: System :: Clustering',
    'Topic :: System :: Distributed Computing',
    'Topic :: System :: Monitoring',
    'Topic :: System :: Systems Administration',
]
requires-python = '>=3.9'
dependencies = [
    'redis[hiredis]>=5.0.1,<9',
    'click>=8.0',
]
dynamic = ['version']

[project.optional-dependencies]
watch = ['watchfiles>=0.16']

[project.scripts]
arq = 'arq.cli:cli'

[project.urls]
Homepage = 'https://github.com/python-arq/arq'
Documentation = 'https://arq-docs.helpmanual.io'
Funding = 'https://github.com/sponsors/samuelcolvin'
Source = 'https://github.com/python-arq/arq'
Changelog = 'https://github.com/python-arq/arq/releases'

[dependency-groups]
testing = [
    'coverage[toml]',
    'dirty-equals',
    'msgpack',
    'pydantic',
    'pytest',
    'pytest-asyncio',
    'pytest-mock',
    'pytest-pretty',
    'pytest-timeout',
    'pytz',
    'tzdata',
    'testcontainers',
]

linting = [
    'ruff',
    'mypy',
    'types-pytz',
]

docs = [
    'sphinx',
]


[tool.uv]
default-groups = ['testing']
required-version = '>=0.8.4'

[tool.pytest.ini_options]
testpaths = 'tests'
filterwarnings = [
    'error',
    # Emitted by pytest-asyncio, necessary until we update it:
   '''ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning''',
   '''ignore:'asyncio.get_event_loop_policy' is deprecated:DeprecationWarning''',
   '''ignore:'asyncio.set_event_loop_policy' is deprecated:DeprecationWarning''',
]
asyncio_mode = 'auto'
timeout = 10

[tool.coverage.run]
source = ['arq']
branch = true
omit = ['arq/__main__.py']

[tool.coverage.report]
precision = 2
exclude_lines = [
    'pragma: no cover',
    'raise NotImplementedError',
    'raise NotImplemented',
    'if TYPE_CHECKING:',
    '@overload',
]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I']
flake8-quotes = {inline-quotes = 'single', multiline-quotes = 'double'}
mccabe = { max-complexity = 13 }

[tool.ruff.format]
quote-style = 'single'

[tool.mypy]
strict = true
